Fix T39029: Blender Internal: Render tiles do not appear until render is finished if Save Buffers enabled